# ssvm-nodejs-starter

./: Cargo.toml  package.json
node/: app.js
src/: lib.rs
