[package]
name = "ssvm_nodejs_starter"
version = "0.1.0"
authors = ["ubuntu"]
edition = "2018"

[package.metadata.ssvmup.profile.release]
wasm-opt = ['-O4']

[lib]
name = "ssvm_nodejs_starter_lib"
path = "src/lib.rs"
crate-type =["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] } 
wasm-bindgen = { version = "=0.2.61", features = ["serde-serialize"] }
